@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.mourosub.web {
    namespace controller {
      class com.mourosub.web.controller.AuthController {
          + login()
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace controller {
      class com.mourosub.web.controller.AuthController.LoginBridgeRequest {
          - email : String
          - supabaseUserId : String
          + getEmail()
          + getSupabaseUserId()
          + setEmail()
          + setSupabaseUserId()
      }
    }
  }
  

  namespace com.mourosub.web {
    namespace controller {
      class com.mourosub.web.controller.UsuarioController {
          + UsuarioController()
          + editar()
          + eliminar()
          + guardar()
          + listar()
          + nuevo()
      }
    }
  }
  

  com.mourosub.web.controller.AuthController o-- com.mourosub.web.repository.UsuarioRepository : usuarioRepository
  com.mourosub.web.controller.AuthController +-down- com.mourosub.web.controller.AuthController.LoginBridgeRequest
  com.mourosub.web.controller.UsuarioController o-- com.mourosub.web.service.UsuarioService : usuarioService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
